# ScaldaScrivania

./: CMakeLists.txt  LICENSE  README.md  SuxsemScaldaScrivania.mjs  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  Ota.c  Ota.h  idf_component.yml  main.c  main.h
